# rl

./: .gitignore  .gitmodules  README.md  __train.py  _train.py  evreflex_rosbag_check.py  evreflex_rosbag_check_chris.py  pyrightconfig.json  requirements.txt  setup.py  test.py  train.py  ws.code-workspace
__rl/common/: utils.py
__rl/models/: base.py
__rl/utils/: utils.py
_rl/: __init__.py
_rl/common/: base_model.py  buffers.py
_rl/datasets/: __init__.py  base.py
_rl/models/: __init__.py  utils.py
catkin_ws/src/esimcpp/: CMakeLists.txt  package.xml
catkin_ws/src/esimcpp/scripts/: esim.py
catkin_ws/src/esimcpp/src/: esim.cpp
condor/: test.sh
docker/: run.bash  run_condor.bash  run_local.bash  run_local_any.bash  run_project.bash
docker/esim/: Dockerfile  README.md
rl/: __init__.py  objective.py
rl/callbacks/: __init__.py  policy_update_callback.py  trial_eval_callback.py
rl/common/: env_checker.py  type_aliases.py
rl/datasets/: __init__.py  base.py  gym_env.py  rl.py  rl_off_policy.py  rl_on_policy.py
rl/environments/: __init__.py  cartpole.py  freeway.py  mountaincar.py  mspacman.py  mypacman.py  pendulum.py  pong.py  skiing.py
rl/envs/: __init__.py  atari_events.py  cartpole_contrast.py  cartpole_events.py  cartpole_rgb.py  (+4 more)
tests/: ctb.bash  ctb.py  framestack.py  padding.py  pong.py  visualise.py
tools/: plot_csv.py  store_suppress.py  vis_gradients.py
toys/: DQN.py  DQN_lightning.py  FrozenLake8x8-v0.py  cartpole.py  custom_env.py  debug.py  demo_videos.py  ppo.py  ppo_pong.py  rgb_cartpole_ppo.py  sb3.py  single-neuron.ipynb
(+104 files in other folders)
